# grepify

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  HANDOFF.md  Makefile  README.md  health.json  pyproject.toml  settings.example.yml
.claude/hooks/: session-start.sh
.claude/skills/setup-matt-pocock-skills/: SKILL.md  issue-tracker-gitlab.md
.claude/skills/to-tickets/: SKILL.md
.claude/skills/wayfinder/: SKILL.md
.githooks/: commit-msg  pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: pipeline.yml  validate.yml
digests/: daily-ai-2026-07-03.json  daily-ai-2026-07-04.json  daily-ai-2026-07-05.json  daily-ai-2026-07-06.json  daily-ai-2026-07-07.json  daily-ai-2026-07-08.json  daily-ai-2026-07-09.json  daily-ai-2026-07-10.json  daily-ai-2026-07-11.json  daily-ai-2026-07-12.json  daily-ai-2026-07-13.json  daily-ai-2026-07-14.json  daily-ai-2026-07-15.json  daily-ai-2026-07-16.json  daily-ai-2026-07-17.json  daily-ai-2026-07-18.json  daily-ai-2026-07-19.json  daily-ai-2026-07-20.json  daily-ai-2026-07-21.json  daily-ai-2026-07-22.json  daily-ai-2026-07-23.json  daily-data-eng-2026-07-08.json  daily-data-eng-2026-07-09.json  daily-data-eng-2026-07-13.json  daily-data-eng-2026-07-14.json  daily-data-eng-2026-07-22.json  weekly-ai-2026-W27.json  weekly-ai-2026-W28.json  weekly-ai-2026-W29.json  weekly-data-eng-2026-W28.json  weekly-data-eng-2026-W29.json
docs/: architecture.md  data-size.md  epic-template.md  feed-triage.md  issue-template.md  playbook.md  prd.md  prev1-hardening.md  process.md  runbook.md  setup.md
docs/adr/: 0001-jinja-ssg.md  0002-source-acquisition-ladder.md
docs/design/: identity-mock.html  personal-source-promotion.md  ui-redesign-brief.md  your-digest.md
docs/epics/: E0.md  E1.md  E2.md  E3.md  E4.md  E5.md
docs/reviews/: 2026-07-13-project-review.md
grepify/: __init__.py  cli.py  clock.py  datasize.py  doctor.py  errors.py  health.py  keywords.py  maintenance.py  models.py  path_safety.py  paths.py  run.py  url_authority.py  windows.py
grepify/config/: __init__.py  filesystem.py  provider.py  schemas.py
grepify/digest/: __init__.py  assemble.py  gating.py  generate.py  periods.py  pipeline.py  prompt.py  rising.py
grepify/extract/: __init__.py  backfill.py  batcher.py  eval.py  fallback.py  pipeline.py  prompt.py  quality.py
grepify/ingest/: __init__.py  base.py  cadence.py  dedup.py  fake.py  feedutil.py  http.py  ladder.py  normalize.py  orchestrator.py  reddit.py  registry.py  rss.py  substack.py  trace.py  transcript.py  x.py  x_twscrape.py  youtube.py
grepify/llm/: __init__.py  client.py  transport.py
grepify/repository/: __init__.py  base.py  commit.py  jsonl_sqlite.py  schema.py
grepify/site/: __init__.py  build.py  markdown.py  next_digest.py  pages.py  published_url.py  render.py  sparkline.py  tokens.py  trends.py  urls.py
grepify/site/static/: digests.js  filters.js  keyword.js  theme.js
grepify/site/templates/: _digest_row.html  base.html  digest_detail.html  digest_index.html  digest_yours.html  health.html  home.html  items.html  keyword.html  sources.html  style.css.jinja
items/2016/01/: 29.jsonl
items/2016/08/: 15.jsonl
items/2017/04/: 01.jsonl
items/2017/07/: 06.jsonl
items/2017/08/: 09.jsonl
items/2017/10/: 23.jsonl
items/2018/08/: 07.jsonl
items/2018/09/: 27.jsonl
items/2019/01/: 03.jsonl
items/2019/10/: 29.jsonl
items/2019/12/: 06.jsonl  20.jsonl
items/2021/06/: 13.jsonl
items/2021/08/: 01.jsonl  15.jsonl  19.jsonl  28.jsonl  29.jsonl
items/2021/09/: 02.jsonl  12.jsonl  18.jsonl  26.jsonl
items/2021/10/: 10.jsonl  24.jsonl
runs/: 20260708T131410Z-9210c8.json  20260708T131410Z-e2c844.json  20260708T131410Z-fdf0e1.json  20260708T193138Z-3c8542.json  20260708T193227Z-f47514.json  20260708T202018Z-6a6412.json  20260708T202126Z-620c2a.json  20260709T032356Z-282128.json  20260709T032500Z-be2bc6.json  20260709T045238Z-923ea3.json  20260709T045341Z-d4f3f9.json  20260709T155614Z-fb0052.json  20260709T155708Z-21bd0c.json  20260709T204703Z-3a38cc.json  20260709T204813Z-3593bb.json  20260710T015032Z-4f1dfc.json  20260710T015134Z-6104ad.json  20260710T032451Z-8fb07f.json  20260710T032541Z-d7329d.json  20260710T033947Z-f37a50.json  20260710T034125Z-af1e2c.json  20260710T034126Z-c6c3b2.json  20260710T034130Z-7e73eb.json  20260710T045201Z-3aafe4.json  20260710T045300Z-150985.json  20260710T064355Z-189ccc.json  20260710T064511Z-1fd4c6.json  20260710T071101Z-ab3a03.json  20260710T071204Z-6bc8f2.json  20260710T153140Z-accb5b.json  20260710T153240Z-dd6b98.json  20260710T180418Z-406565.json  20260710T180750Z-551200.json  20260710T202310Z-57c841.json  20260710T202706Z-51bcc0.json  20260711T002518Z-038303.json  20260711T002828Z-89e4ca.json  20260711T002835Z-eda812.json  20260711T002846Z-b03fc4.json  20260711T024728Z-e1938d.json  (+157 more)
scripts/: artifact_download.py  commit_pipeline_data.py  digest-gate.sh  ensure-data-branch.sh  eval.py  pipeline_final_status.py  setup-git-identity.sh
site-placeholder/: index.html
sources/: keywords.yml  settings.yml
sources/groups/: .gitkeep  ai-business.yml  ai-research.yml  ai-tooling-dev.yml  ai-voices.yml  data-engineering.yml  reddit-ai.yml  x-watchlist.yml  youtube-ai.yml
tests/: conftest.py  test_artifact_download.py  test_backfill.py  test_cli.py  test_cli_backfill.py  test_cli_datasize.py  test_cli_digest.py  test_cli_extract.py  test_cli_maintain.py  test_clock.py  test_commit.py  test_commit_pipeline_data.py  test_config.py  test_datasize.py  test_dedup.py  test_digest_assemble.py  test_digest_gate.py  test_digest_gating.py  test_digest_generate.py  test_digest_periods.py  test_digest_rising.py  test_doctor.py  test_ensure_data_branch.py  test_extract_batcher.py  test_extract_eval.py  test_extract_pipeline.py  test_extract_prompt.py  test_extract_quality.py  test_extract_transcript.py  test_extract_validation.py  test_health.py  test_ingest_cadence.py  test_ingest_fetcher.py  test_ingest_http.py  test_keywords.py  test_ladder.py  test_llm_client.py  test_maintenance.py  test_normalize.py  test_orchestrator.py  (+30 more)
(+460 files in other folders)
