[project]
name = "grepify"
version = "0.1.0"
description = "Personal, configurable news/video/social aggregator (grep the firehose)."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "yake>=0.7.3",
    "jinja2>=3.1",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
# E5 (M5) integrations, kept optional so the core install and `make check` stay
# lean and network-free: the X fetcher (twscrape) and YouTube transcripts
# (youtube-transcript-api) are best-effort source classes (PRD §13) whose real
# clients import their library lazily. Core code never imports these at module
# load; only the scheduled `pipeline` CI job installs them (`uv sync --extra x
# --extra transcripts`). Tests drive both through fixture-based fakes.
x = ["twscrape>=0.17"]
transcripts = ["youtube-transcript-api>=1.0"]

[project.scripts]
grepify = "grepify.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.2",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["grepify"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Core rule set. Explicit and conservative so agents in later sessions inherit a
# stable lint contract rather than chasing churn from newly-enabled defaults.
select = ["E", "F", "I", "N", "UP", "B", "SIM", "PL", "RUF"]
ignore = [
    "PLR2004", # magic-value comparisons are fine in tests / small constants
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]

[tool.mypy]
# Strict on core (the shipped package). Tests are excluded from strict typing.
python_version = "3.12"
strict = true
files = ["grepify"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
# feedparser ships no py.typed marker / stubs; its FeedParserDict is
# deliberately dynamic (attribute + mapping access), so it can't be typed
# precisely anyway. Confined to this one module rather than a blanket ignore.
module = "feedparser"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# yake ships no py.typed marker / stubs either; confined to the one module
# that imports it (grepify.extract.fallback).
module = "yake"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # feedparser's own published_parsed<-updated_parsed compat shim (not our usage) -
    # tracked upstream, nothing actionable on our side.
    "ignore:To avoid breaking existing software.*:DeprecationWarning:feedparser.util",
]
